Revision history for {{$dist->name}}

{{$NEXT}}

0.04      2018-08-19 12:56:54 -0400
  - When `cc -MM` or `c++ -MM` fails for computing dependencies, fall back
    on just the .c file being the dependency.

0.03      2018-08-16 04:03:09 -0400
  - Fix for test failure on cygwin + MSWin32
  - Additional diagnostics for Fortran build test

0.02      2018-08-09 04:54:30 -0400
  - initial version