@@ -1,9 +1,0 @@
-! Fortran 90 version
-
-function add2(a, b) result(ret)
-  implicit none
-  integer :: a
-  integer :: b
-  integer :: ret
-  ret = a + b
-end function add2
