@@ -13,8 +13,6 @@ installer      = Author::Plicease::MakeMaker
 github_user    = Perl5-FFI
 irc            = irc://irc.perl.org/#native
 
-diag = +FFI::Platypus::Lang::Fortran
-
 diag_preamble = | $post_diag = sub {
 diag_preamble = |   require FFI::Build::Platform;
 diag_preamble = |   diag "[PLATFORM]\n";
@@ -44,7 +42,6 @@ remove = File::Copy
 
 ; optional for tests
 remove = Acme::Alien::DontPanic
-remove = FFI::Platypus::Lang::Fortran
 
 [PruneFiles]
 match = /tmpbuild\.
