@@ -13,7 +13,6 @@ $modules{$_} = $_ for qw(
   Capture::Tiny
   ExtUtils::MakeMaker
   FFI::Platypus
-  FFI::Platypus::Lang::Fortran
   IPC::Cmd
   JSON::PP
   List::Util
